# pademw

./: CMakeLists.txt  Makefile  README.md  rubinov.cs  rubinov.cs~  samplestatus.txt
include/: controller.h  form.h  padeBoard.h  padeClient.h  padeServer.h  padeUDPServer.h  pademw.h  udpServer.h  wc.h
python/: fakeManagement.py  fakeWC.py  fakeWC_client.py  fakeWC_server.py  fakepacketsender.py  fakepacketsender.py~
samplePackets/: statusline
src/: controller.cpp  form.cpp  form.ui  padeBoard.cpp  padeClient.cpp  padeServer.cpp  padeServerTest.cpp  padeUDPServer.cpp  pademw.cpp  pademworignal.cpp  standalone.cpp  udpServer.cpp  uitest.cpp  wc.cpp  wcTest.cpp
tests/: pademwTests.cpp
